# C_Programming_First_Semester

./: CMakeLists.txt  README.md  Uebung7.c  Uebung7.h  main.c
Uebung1/: uebung1.c  uebung1.h
Uebung10/: Uebung10.c  Uebung10.h
Uebung11/: suche.c  suche.h  uebung11.c  uebung11.h
Uebung12/: buch.c  buch.h  entferne.c  entferne.h  trimstring.c  trimstring.h
Uebung13/: uebung13.c  uebung13.h
Uebung2/: uebung2.c  uebung2.h
Uebung3/: uebung3.c  uebung3.h
Uebung4/: uebung4.c  uebung4.h
Uebung5/: uebung5.c  uebung5.h
Uebung6/: Uebung6.c  Uebung6.h
Uebung7/: Uebung7.c  Uebung7.h
Uebung8/: uebung8.c  uebung8.h
Zusatzuebung2/: zusatzuebung.c  zusatzuebung.h
