cmake_minimum_required(VERSION 3.17)
project(PG1 C)

set(CMAKE_C_STANDARD 99)

add_executable(PG1 main.c Uebung6/Uebung6.c Uebung6/Uebung6.h Uebung1/uebung1.c Uebung1/uebung1.h Uebung2/uebung2.c Uebung2/uebung2.h Uebung3/uebung3.c Uebung3/uebung3.h Uebung4/uebung4.c Uebung4/uebung4.h Uebung5/uebung5.c Uebung5/uebung5.h Uebung7.c Uebung7.h)